reaname, add dashboard

--- a/client/src/app/App.module.scss
+++ b/client/src/app/App.module.scss
@@ -38,5 +38,5 @@
 .sidebarTitle {
   color: $dark-alpha-60;
   text-transform: uppercase;
-  margin: $space-ml 0 $space-ml;
+  margin: $space-ml 0 $space-s 0;
 }
