--- a/client/src/app/components/Navbar/Navbar.module.scss
+++ b/client/src/app/components/Navbar/Navbar.module.scss
@@ -1,7 +1,6 @@
 @import 'invoker-tokens/index.scss';
 
 .root {
-  background: $brand-primary-200;
   position: sticky;
   top: 0;
   left: 0;
@@ -9,6 +8,7 @@
   padding: $space-vertical-m;
   composes: container-bleed from global;
   z-index: 99999;
+  box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.08);
 }
 
 .container {
@@ -31,7 +31,7 @@
 }
 
 .name {
-  color: $light-alpha-100 !important;
+  // color: $light-alpha-100 !important;
 }
 
 .github {
