--- a/client/src/app/components/Text/Text.module.scss
+++ b/client/src/app/components/Text/Text.module.scss
@@ -34,7 +34,7 @@
 // Heading Text
 .heading1 {
   composes: root;
-  color: $dark-alpha-80;
+  // color: $dark-alpha-80;
   font-size: $heading-1;
   line-height: 52px;
   letter-spacing: -1.44px;
@@ -42,7 +42,7 @@
 }
 .heading2 {
   composes: root;
-  color: $dark-alpha-80;
+  // color: $dark-alpha-80;
   font-size: $heading-2;
   line-height: 36px;
   letter-spacing: -1.2px;
@@ -50,7 +50,7 @@
 }
 .heading3 {
   composes: root;
-  color: $dark-alpha-80;
+  // color: $dark-alpha-80;
   font-size: $heading-3;
   line-height: 30px;
   letter-spacing: -0.8px;
@@ -58,7 +58,7 @@
 }
 .heading4 {
   composes: root;
-  color: $dark-alpha-80;
+  // color: $dark-alpha-80;
   font-size: $heading-4;
   line-height: 26px;
   letter-spacing: -0.8px;
@@ -66,7 +66,7 @@
 }
 .heading5 {
   composes: root;
-  color: $dark-alpha-80;
+  // color: $dark-alpha-80;
   font-size: $heading-5;
   line-height: 22px;
   letter-spacing: -0.24px;
@@ -74,7 +74,7 @@
 }
 .heading6 {
   composes: root;
-  color: $dark-alpha-80;
+  // color: $dark-alpha-80;
   font-size: $heading-6;
   line-height: 18px;
   letter-spacing: -0.24px;
